--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=create
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# webconfig
+server.port=8081
