--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "bowser": "^2.11.0",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
